Corrected colors so they align with the original and fixed a visual bug with hovering over alt table rows

--- a/FrontEnd/Modules/Base/Css/kendo.custom.css
+++ b/FrontEnd/Modules/Base/Css/kendo.custom.css
@@ -494,6 +494,10 @@ td.k-group-cell,
     background-color: var(--lightest-color) !important;
 }
 
+.k-table-alt-row:hover {
+    background-color: color-mix(in srgb, var(--kendo-color-on-app-surface, #1D1B20) 8%, transparent) !important;
+}
+
 .k-pivot-rowheaders .k-alt .k-alt,
 .k-header.k-alt {
     background-color: #dedede;
